--- a/bytecast-amd64-mytest/nbproject/project.properties
+++ b/bytecast-amd64-mytest/nbproject/project.properties
@@ -32,7 +32,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.bytecast-amd64.jar}
+    ${reference.bytecast-amd64.jar}:\
+    ${reference.bytecast-common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +73,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.bytecast-amd64=../../bytecast-amd64/bytecast-amd64
+project.bytecast-common=../../bytecast/bytecast-common/bytecast-common
 reference.bytecast-amd64.jar=${project.bytecast-amd64}/dist/bytecast-amd64.jar
+reference.bytecast-common.jar=${project.bytecast-common}/dist/bytecast-common.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
